--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         <div class="project">
             <h4>ECE Industry Landscape Analysis</h4>
             <p>
-                Conducted an industry-level analysis of the ECE sector, identifying growth drivers, competitive
+                Conducted an industry-level analysis of the Early Childcare Education sector, identifying growth drivers, competitive
                 dynamics, and key risks. Evaluated strategic positioning and market trends influencing firm behavior.
             </p>
             <a href="projects/ECE Industry Overview.pdf" target="_blank">View Report</a>
