--- a/index.html
+++ b/index.html
@@ -139,59 +139,61 @@
     }
 
     /* ===== EXPERIENCE ===== */
-    #experience {
-      background: white;
-    }
+#experience {
+  background: white;
+}
 
-    #experience h2 {
-      text-align: center;
-      font-size: 2.5em;
-      margin-bottom: 2.5em;
-      color: var(--navy-text);
-    }
+#experience h2 {
+  text-align: center;
+  font-size: 2.5em;
+  margin-bottom: 2.5em;
+  color: var(--navy-text);
+}
 
-    .experience-wrapper {
-      max-width: 900px;
-      margin: 0 auto;
-    }
+.experience-wrapper {
+  max-width: 900px;
+  margin: 0 auto;
+}
 
-    .experience-entry {
-      margin-bottom: 2.5em;
-    }
+.experience-entry {
+  display: grid;
+  grid-template-columns: 110px 1fr;
+  column-gap: 1.5em;
+  margin-bottom: 2.8em;
+}
 
-    .experience-header {
-      display: flex;
-      align-items: center;
-      gap: 1.2em;
-      margin-bottom: 0.6em;
-    }
+.experience-logo {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
 
-    .experience-header img {
-      height: 60px;
-      max-width: 140px;
-      object-fit: contain;
-    }
+.experience-logo img {
+  max-width: 90px;
+  max-height: 60px;
+  object-fit: contain;
+}
 
-    .experience-header h3 {
-      color: var(--navy-text);
-      margin-bottom: 0.15em;
-    }
+.experience-content h3 {
+  color: var(--navy-text);
+  margin-bottom: 0.2em;
+}
 
-    .experience-header span {
-      font-size: 0.9em;
-      color: #555;
-    }
+.experience-content span {
+  display: block;
+  font-size: 0.9em;
+  color: #555;
+  margin-bottom: 0.6em;
+}
 
-    .experience-entry ul {
-      margin-left: 1.2em;
-      margin-top: 0.4em;
-    }
+.experience-content ul {
+  margin-left: 1.2em;
+}
 
-    .experience-entry li {
-      margin-bottom: 0.35em;
-      color: #444;
-    }
-
+.experience-content li {
+  margin-bottom: 0.35em;
+  color: #444;
+}
     /* ===== PROJECTS ===== */
     #projects {
       background: var(--light-bg);
@@ -297,67 +299,68 @@
   <div class="experience-wrapper">
 
     <div class="experience-entry">
-      <div class="experience-header">
+      <div class="experience-logo">
         <img src="images/rbc.png">
-        <div>
-          <h3>RBC Global Asset Management</h3>
-          <span>Portfolio Analyst Intern</span>
-        </div>
       </div>
-      <ul>
-        <li>Supported portfolio strategy and asset allocation across public markets</li>
-        <li>Built macro-driven analyses linking GDP, inflation, and central bank policy</li>
-        <li>Produced advisor-facing materials supporting client asset growth</li>
-      </ul>
+      <div class="experience-content">
+        <h3>RBC Global Asset Management</h3>
+        <span>Portfolio Analyst Intern</span>
+        <ul>
+          <li>Supported portfolio strategy and asset allocation across public markets</li>
+          <li>Built macro-driven analyses linking GDP, inflation, and central bank policy</li>
+          <li>Produced advisor-facing materials supporting client asset growth</li>
+        </ul>
+      </div>
     </div>
 
     <div class="experience-entry">
-      <div class="experience-header">
+      <div class="experience-logo">
         <img src="images/ig.png">
-        <div>
-          <h3>IG Wealth Management</h3>
-          <span>Commercial Banking Analyst Intern</span>
-        </div>
       </div>
-      <ul>
-        <li>Supported pricing and product strategy for a large mortgage portfolio</li>
-        <li>Built dashboards tracking pricing trends</li>
-        <li>Improved rate exception and approval workflows</li>
-      </ul>
+      <div class="experience-content">
+        <h3>IG Wealth Management</h3>
+        <span>Commercial Banking Analyst Intern</span>
+        <ul>
+          <li>Supported pricing and product strategy for a large mortgage portfolio</li>
+          <li>Built dashboards tracking pricing trends</li>
+          <li>Improved rate exception and approval workflows</li>
+        </ul>
+      </div>
     </div>
 
     <div class="experience-entry">
-      <div class="experience-header">
+      <div class="experience-logo">
         <img src="images/rtech.jfif">
-        <div>
-          <h3>RTech Solutions</h3>
-          <span>Financial Analyst</span>
-        </div>
       </div>
-      <ul>
-        <li>Built financial models for budgeting, forecasting, and scenarios</li>
-        <li>Analyzed cost drivers and operational inefficiencies</li>
-        <li>Prepared management-ready financial reports</li>
-      </ul>
+      <div class="experience-content">
+        <h3>RTech Solutions</h3>
+        <span>Financial Analyst</span>
+        <ul>
+          <li>Built financial models for budgeting, forecasting, and scenarios</li>
+          <li>Analyzed cost drivers and operational inefficiencies</li>
+          <li>Prepared management-ready financial reports</li>
+        </ul>
+      </div>
     </div>
 
     <div class="experience-entry">
-      <div class="experience-header">
+      <div class="experience-logo">
         <img src="images/bmo.jpg">
-        <div>
-          <h3>Bank of Montreal (BMO)</h3>
-          <span>Bank Teller</span>
-        </div>
       </div>
-      <ul>
-        <li>Delivered regulated frontline banking services</li>
-        <li>Built trust through accuracy and discretion</li>
-        <li>Developed operational and compliance foundation</li>
-      </ul>
+      <div class="experience-content">
+        <h3>Bank of Montreal (BMO)</h3>
+        <span>Bank Teller</span>
+        <ul>
+          <li>Delivered regulated frontline banking services</li>
+          <li>Built trust through accuracy and discretion</li>
+          <li>Developed operational and compliance foundation</li>
+        </ul>
+      </div>
     </div>
 
   </div>
 </section>
+
 
 <section id="projects">
   <h2>Selected Work</h2>
@@ -443,3 +446,4 @@
 </div>
 </body>
 </html>
+
