--- a/index.html
+++ b/index.html
@@ -375,13 +375,13 @@
     <div class="project">
       <h4>Enphase Energy — Equity Research & Valuation</h4>
       <p>Fund-style equity research evaluating business model, growth drivers, and valuation considerations.</p>
-      <a href="projects/Enphase analysis.pdf" target="_blank">View Analysis</a>
+      <a href="assets/enphase-analysis.pdf" target="_blank">View Project</a>
     </div>
 
     <div class="project">
       <h4>Ageos Pharmaceuticals — Company & Industry Overview</h4>
       <p>Company and industry analysis assessing competitive positioning and strategic outlook.</p>
-      <a href="projects/Ageos pharacutical.pdf" target="_blank">View Analysis</a>
+    <a href="assets/ageos-pharacutical.pdf" target="_blank">View Project</a>
     </div>
   </div>
 
@@ -392,13 +392,13 @@
     <div class="project">
       <h4>Fertility Trends in China</h4>
       <p>Empirical analysis of demographic shifts and long-term macroeconomic implications.</p>
-      <a href="projects/ECO 403 Fertliity changes in china.pdf" target="_blank">View Paper</a>
+      <a href="assets/eco-403-fertility-changes-in-china.pdf" target="_blank">View Project</a>
     </div>
 
     <div class="project">
       <h4>Economic Impact of COVID-19</h4>
       <p>Assessment of pandemic-driven shocks and policy responses.</p>
-      <a href="projects/COvid 19 pandemic.pdf" target="_blank">View Paper</a>
+     <a href="assets/covid-19-pandemic.pdf" target="_blank">View Project</a>
     </div>
   </div>
 
@@ -409,13 +409,13 @@
     <div class="project">
       <h4>Blockchain Technology Overview</h4>
       <p>Structured overview of blockchain mechanisms and economic implications.</p>
-      <a href="projects/Blockchain overview.pdf" target="_blank">View Overview</a>
+      <a href="assets/blockchain-overview.pdf" target="_blank">View Project</a>
     </div>
 
     <div class="project">
       <h4>ECE Industry Landscape</h4>
       <p>Industry-level analysis of technology trends and competitive dynamics.</p>
-      <a href="projects/ECE Industry Overview.pdf" target="_blank">View Report</a>
+      <a href="assets/ece-industry-overview.pdf" target="_blank">View Project</a>
     </div>
   </div>
 
@@ -426,13 +426,13 @@
     <div class="project">
       <h4>Video Game Industry — Market Analysis</h4>
       <p>Revenue, platform, and consumer trend analysis.</p>
-      <a href="projects/Video game Analysis.pdf" target="_blank">View Analysis</a>
+      <a href="assets/video-game-analysis.pdf" target="_blank">View Project</a>
     </div>
 
     <div class="project">
       <h4>Video Game Industry — Executive Deck</h4>
       <p>Executive-ready presentation communicating strategic insights.</p>
-      <a href="projects/Video game overview slides.pdf" target="_blank">View Slides</a>
+     <a href="assets/video-game-overview-slides.pdf" target="_blank">View Slides</a>
     </div>
   </div>
 
@@ -446,4 +446,5 @@
 </div>
 </body>
 </html>
+
 
