--- a/index.html
+++ b/index.html
@@ -374,13 +374,13 @@
 
     <div class="project">
       <h4>Enphase Energy — Equity Research & Valuation</h4>
-      <p>Fund-style equity research evaluating business model, growth drivers, and valuation considerations.</p>
+      <p>Analyzed the global video game industry using market data to assess revenue models, platform dynamics, and consumer behavior. Evaluated structural shifts shaping growth across mobile, console, and PC gaming ecosystems.</p>
       <a href="assets/enphase-analysis.pdf" target="_blank">View Project</a>
     </div>
 
     <div class="project">
       <h4>Ageos Pharmaceuticals — Company & Industry Overview</h4>
-      <p>Company and industry analysis assessing competitive positioning and strategic outlook.</p>
+      <p>Analyzed the global video game industry using market data to assess revenue models, platform dynamics, and consumer behavior. Evaluated structural shifts shaping growth across mobile, console, and PC gaming ecosystems.</p>
       <a href="assets/Ageos-pharacutical.pdf" target="_blank">View Project</a>
     </div>
   </div>
@@ -391,13 +391,13 @@
 
     <div class="project">
       <h4>Fertility Trends in China</h4>
-      <p>Empirical analysis of demographic shifts and long-term macroeconomic implications.</p>
+      <p>Analyzed Agios Pharmaceuticals with a focus on its precision oncology strategy and IDH1-targeted pipeline. Evaluated scientific risk, commercialization challenges, and competitive positioning within the biopharmaceutical industry.</p>
       <a href="assets/eco-403-fertliity-changes-in-china.pdf" target="_blank">View Project</a>
     </div>
 
     <div class="project">
       <h4>Economic Impact of COVID-19</h4>
-      <p>Assessment of pandemic-driven shocks and policy responses.</p>
+      <p>Analyzed Agios Pharmaceuticals with a focus on its precision oncology strategy and IDH1-targeted pipeline. Evaluated scientific risk, commercialization challenges, and competitive positioning within the biopharmaceutical industry.</p>
      <a href="assets/covid-19-pandemic.pdf" target="_blank">View Project</a>
     </div>
   </div>
@@ -408,13 +408,13 @@
 
     <div class="project">
       <h4>Blockchain Technology Overview</h4>
-      <p>Structured overview of blockchain mechanisms and economic implications.</p>
+      <p>Analyzed Agios Pharmaceuticals with a focus on its precision oncology strategy and IDH1-targeted pipeline. Evaluated scientific risk, commercialization challenges, and competitive positioning within the biopharmaceutical industry.</p>
       <a href="assets/blockchain-overview.pdf" target="_blank">View Project</a>
     </div>
 
     <div class="project">
       <h4>ECE Industry Landscape</h4>
-      <p>Industry-level analysis of technology trends and competitive dynamics.</p>
+      <p>Performed an industry analysis of the Early Childhood Education sector, examining demand drivers, regulatory structure, and labor constraints. Evaluated cost pressures and structural challenges shaping long-term sustainability and access.</p>
       <a href="assets/ece-industry-overview.pdf" target="_blank">View Project</a>
     </div>
   </div>
@@ -425,13 +425,13 @@
 
     <div class="project">
       <h4>Video Game Industry — Market Analysis</h4>
-      <p>Revenue, platform, and consumer trend analysis.</p>
+      <p>Analyzed the global video game industry, evaluating revenue models, platform dynamics, and consumer demand trends. Assessed profitability drivers and structural shifts across mobile, console, and PC ecosystems.</p>
       <a href="assets/video-game-analysis.pdf" target="_blank">View Project</a>
     </div>
 
     <div class="project">
       <h4>Video Game Industry — Executive Deck</h4>
-      <p>Executive-ready presentation communicating strategic insights.</p>
+      <p>Analyzed the global video game industry, evaluating revenue models, platform dynamics, and consumer demand trends. Assessed profitability drivers and structural shifts across mobile, console, and PC ecosystems.</p>
      <a href="assets/video-game-overview-slides.pdf" target="_blank">View Slides</a>
     </div>
   </div>
@@ -446,6 +446,7 @@
 </div>
 </body>
 </html>
+
 
 
 
