--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
 
 <section id="projects">
-  <h2>Selected Work</h2>
+  <h2>Project Work</h2>
 
   <!-- PROJECT GROUPS EXACTLY AS YOU REQUESTED -->
   <!-- (same grouping as your long example, just cleaner) -->
@@ -446,6 +446,7 @@
 </div>
 </body>
 </html>
+
 
 
 
